--- a/Machine Learning Project/Packages/manifest.json
+++ b/Machine Learning Project/Packages/manifest.json
@@ -4,8 +4,8 @@
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
     "com.unity.ide.vscode": "1.2.3",
-    "com.unity.ml-agents": "1.0.6",
-    "com.unity.ml-agents.extensions": "file:C:/Users/mathi/Downloads/ml-agents-release_11/com.unity.ml-agents.extensions",
+    "com.unity.ml-agents": "file:C:/Users/mathi/Documents/GitHub/ml-agents/com.unity.ml-agents",
+    "com.unity.ml-agents.extensions": "file:C:/Users/mathi/Documents/GitHub/ml-agents/com.unity.ml-agents.extensions",
     "com.unity.probuilder": "4.4.0",
     "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.test-framework": "1.1.19",
